--- a/public/index.html
+++ b/public/index.html
@@ -9,35 +9,56 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+
+
+
+    <!-- <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-market-overview.js" async>
+      {
+      "colorTheme"= "light",
+      "dateRange"= "12M",
+      "showChart"= true,
+      "locale"= "en",
+      "largeChartUrl"= "",
+      "isTransparent"= false,
+      "showSymbolLogo"= true,
+      "showFloatingTooltip"= false,
+      "width"= "400",
+      "height"= "660",
+      "plotLineColorGrowing"= "rgba(41, 98, 255, 1)",
+      "plotLineColorFalling"= "rgba(41, 98, 255, 1)",
+      "gridLineColor"= "rgba(240, 243, 250, 0)",
+      "scaleFontColor"= "rgba(120, 123, 134, 1)",
+      "belowLineFillColorGrowing"= "rgba(41, 98, 255, 0.12)",
+      "belowLineFillColorFalling"= "rgba(41, 98, 255, 0.12)",
+      "belowLineFillColorGrowingBottom"= "rgba(41, 98, 255, 0)",
+      "belowLineFillColorFallingBottom"= "rgba(41, 98, 255, 0)",
+      "symbolActiveColor"= "rgba(41, 98, 255, 0.12)",
+      "tabs"= [
+        {
+          "title": "Futures",
+          "symbols": [
+            {
+              "s": "BINANCE:ETHUSDT"
+            },
+            {
+              "s": "BINANCE:BTCUSDT"
+            },
+            {
+              "s": "BINANCE:SHIBUSDT"
+            }
+          ],
+          "originalTitle": "Futures"
+        }
+      ]
+    }
+      </script>
   </body>
 </html>
